Add license to composer.json

--- a/three/composer.json
+++ b/three/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "acme/plugin-debug",
   "description": "Debug plugin for the acme framework",
+  "license": "MIT",
   "require": {
     "acme/framework": ">=1.2"
   }
