--- a/one/composer.json
+++ b/one/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "acme/plugin-logger",
   "description": "Logger plugin for the acme framework",
+  "license": "MIT",
   "require": {
     "acme/framework": ">=1.1"
   }
