Add cms project in root dir

--- a/one/composer.json
+++ b/one/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "acme/plugin-logger",
-  "description": "Logger plugin for the acme framework",
+  "description": "Logger plugin for the acme cms",
   "license": "MIT",
   "require": {
     "acme/framework": ">=1.1"
