--- a/two/composer.json
+++ b/two/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "acme/plugin-cache",
-  "description": "Cache plugin for the acme framework",
+  "description": "Cache plugin for the acme cms",
   "license": "MIT",
   "require": {
-    "acme/framework": ">=1.0"
+    "acme/cms": ">=1.0"
   }
 }
